[package]
name = "mqtt-esp-rs-example"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = {version = "0.23.0", features = [ "esp32c6", "log"] }
esp-hal-embassy     = { version = "0.6.0", features = ["esp32c6"] }
esp-alloc = { version = "0.6.0" }
embassy-executor    = { version = "0.7.0", features = ["task-arena-size-131072"] }
embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time        = "0.4.0"
embassy-sync        = "0.6.1"
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
esp-wifi = { version = "0.12.0", features = ["esp32c6", "wifi"] }
log = { version = "0.4.16" }
esp-mbedtls = {git = "https://github.com/TuEmb/esp-mbedtls.git", branch = "esp32c6_support", features = ["esp32c6"]}
static_cell         = { version = "2.1.0", features = ["nightly"] }
cfg-if                   = "1.0.0"
heapless            = "0.8.0"
embedded-io = "0.6.1"
mqttrust = "0.6.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
wdg = []
tls = []